--- a/index.html
+++ b/index.html
@@ -38,30 +38,35 @@
   <div class="wrapper">
 
     <div class="one">
-      <p>
-        <span class="footnote"><span class="fnnum">[1]</span>Graphisme En France 2012 : Code <> Outils <>
-                Design, trans. Lucrezia Russo (Paris: Centre national des arts plastiques, 2012).</span><br>
-        <span class="footnote"><span class="fnnum">[2]</span> idem, 5.</span><br>
+      <aside>
+        <div class="footnote"><span class="fnnum">[1]</span>Graphisme En France 2012 : Code <> Outils <>
+              Design, trans. Lucrezia Russo (Paris: Centre national des arts plastiques, 2012).</div>
+        <div class="footnote"><span class="fnnum">[2]</span> idem, 5.</div>
         <span class="footnote"><span class="fnnum">[3]</span> idem, 6.</span><br>
         <span class="footnote"><span class="fnnum">[4]</span> idem, 9.</span><br>
         <span class="footnote"><span class="fnnum">[5]</span> idem, 8.</span><br>
-        <span class="footnote"><span class="fnnum">[6]</span> 2017 CAST Symposium BEING MATERIAL: Ben Fry and Casey Reas. www.youtube.com<br>/watch?v=9BtqBjGEpA0.</span><br>
+        <span class="footnote"><span class="fnnum">[6]</span> 2017 CAST Symposium BEING MATERIAL: Ben Fry and Casey
+          Reas. www.youtube.com<br>/watch?v=9BtqBjGEpA0.</span><br>
         <span class="footnote"><span class="fnnum">[7]</span> ibid.</span><br>
         <span class="footnote"><span class="fnnum">[8]</span> CAST Symposium BEING MATERIAL.</span><br>
-        <span class="footnote"><span class="fnnum">[9]</span> Casey Reas, “Thoughts on Software for the Visual Arts,” Medium, January 27, 2019, https://medium.com /@REAS/thoughts-on- software-for-the -visual-arts- 690ea7bfc8b6.</span><br>
+        <span class="footnote"><span class="fnnum">[9]</span> Casey Reas, “Thoughts on Software for the Visual Arts,”
+          Medium, January 27, 2019, https://medium.com /@REAS/thoughts-on- software-for-the -visual-arts-
+          690ea7bfc8b6.</span><br>
 
-      </p>
+      </aside>
     </div>
-    
+
 
     <div class="two">
 
-      <div class="oneCol">
-        <h1>Introduction: let's see what happens if the title is long</h1>
-      </div>
-      
-      <div class="twoCol">
-        <p>Over the last three decades, the exponential development of technology has impacted all creative practices
+      <section>
+
+        <div class="oneCol">
+          <h1>Introduction: let's see what happens if the title is long</h1>
+        </div>
+
+        <div class="twoCol">
+          Over the last three decades, the exponential development of technology has impacted all creative practices
           and
           has radically changed graphic design perspectives. The revolution brought about by the rise of the personal
           computer, particularly the release of the first Macintosh in 1984, created new opportunities for graphic
@@ -89,7 +94,7 @@
           free
           software [is that] the designer can integrate new functions and, above all, understand how the software works.
           Then, s/he is not lowered to a role of ‘user’ or ‘consumer’ and condemned to technical passivity. S/he moves
-          from the status of consumer to the one of creator.” <span class="fnnum">[4]</span><br>
+          from the status of consumer to the one of creator.” <span class="fnnum">[4]</span>
           Ten years after its release, Donnot mentioned Processing as being one of the programming languages and
           environments, within the free software movement, which represented an interesting alternative for graphic
           design: “The software proposes a new space for visual experimentation where the design is controlled by code.
@@ -158,11 +163,170 @@
           research on one side and design industry on the other—this thesis highlights alternative perspectives
           encompassing the acceptance of the profession’s paradox and the awareness of the designers’ responsibility in
           contemporary society.
+        </div>
 
-        </p>
-      </div>
+        <div class="oneCol">
+          <h1> 1. Start-up vs. Free Open Source: Contrasting Cultures</h1>
+        </div>
+
+        <div class="twoCol">
+          Graphic Design history cannot be dissociated from the technological evolution of tools: from the invention of
+          the movable-type printing press, that shaped a new relationship to alphabets and, therefore, to typography,
+          till
+          the creation of the offset printing or the photocopy machine, which liberated the production and distribution
+          of
+          artist books and fanzines, new design esthetics and methodologies have always been empowered by new
+          technological devices.
+          Computational machines, the precursors of personal computers, joined the list of tools that have informed and
+          reformed the way artists and designers conceived and produced images. By the 1970s, we observed a rising
+          interest in merging art and mathematics through the medium of computation. Artists such as Vera Molnár,
+          Manfred
+          Mohr, and Frieder Nake pioneered the exploration of algorithmic thinking as a practical methodology for the
+          arts. In a recent interview, Vera Molnár reiterated her approach: “In order to detect this extraordinary
+          moment
+          when the art arises, we do not have enough time and strength to craft it. It would mean to make millions and
+          billions of variations. […] Here, you have a slave that follows your wishes. [The computer] allows you to
+          materialize very quickly your visual thoughts which you could not have created because of lack of time or
+          strength, or visual acuteness.” Working with computation, Molnár pursued a part of the research developed by
+          artists like Sol Lewitt, based on conceiving instructions to create a work of art. Giving instructions to the
+          machine through code and randomizing some variables, she was, therefore, expanding intuition and enriching her
+          senses: “There is a thing that can replace intuition. It’s randomness. Because […] it will show you billions
+          of
+          possibilities of which, with your limited imagination, you could not have thought of.”
+          The concept of expanding the potential of creation, using computers and code, is not limited to this radical
+          artistic research. Mirroring the niche of computational art, the graphic design scene of central Europe of the
+          1960s developed design research that explored the potential of computation. Karl Gerstner, a prominent figure
+          of the Swiss graphic design scene of post-WWII, was one of the first graphic designers who foresaw the
+          opportunities brought by computers for a rational and functional graphic design production. In 1963, he
+          published Designing Programmes, in which he compiled his efforts for automatizing processes and applying
+          scientific methodologies to design. The designer needed a set of rules to select and arrange the different
+          design components (typography, images, color). The computer could help create systems that enlarge the range
+          of solutions, within which the designer could identify the best one.
+          If the work of Gerstner or Molnár was situated at a time when computational machines were essentially
+          accessible for scientific or military research, the release of the first Macintosh in 1984 was a pivot towards
+          the extension of access to computers for graphic designers, and, in the following years, for a bigger
+          audience.
+          The American graphic designer April Greiman—who did part of her studies in Basel in the 1970s and was immersed
+          in the swiss graphic design approach—was one of the first designers to openly embrace the opportunities
+          created by the Macintosh. Interviewed by the magazine Emigre in 1988, she echoed Vera Molnár: “What I
+          experience is rather than just doing something quickly, we’re looking at more possibilities. Instead of doing
+          more work, we are seeing more options. […] With the Mac, once the information is stored, you can just look at
+          seventy-two thousand variations. And then the accidents happen, and you say, ‘Oh that’s so much better, why
+          don’t you go that way?’”
+          The iteration of graphic results offered by the machine was promoted as a sustainable methodology for design.
+          Furthermore, Greiman adopted the esthetical language of the computer as a new opportunity for graphic design
+          expression: the pixel, the raster of the screen, transparency and superposition, as well as the simultaneous
+          presence of visual elements became core elements of her production. These new esthetics could, according to
+          Greiman, empower personal and collective manifestation: “Everybody is visual; it’s in the collective soul, and
+          the Mac will empower and help a lot of these people to express themselves. I like the idea that so many people
+          will have a common language […] And this tool has its own language!”
+          Despite this optimistic vision, we witnessed, starting the mid-1990s, a slow but consistent shift towards a
+          different use of the computer. If it was true that in the late 1980s computers were considered tools submitted
+          to human beings to expand perception and production, during the following decade this trend faded away. In the
+          early 2000s, it resulted in the massification of visual language’s esthetics due to a standardization of the
+          tools and, therefore, of the graphic design practice.
+          So, what happened between the end of the 1980s and the beginning of the 2000s? What were the reasons for the
+          shift of the graphic design practice towards standardized methodologies? Radical design research based on the
+          exploration of computer depth through the medium of computation was still pursued in institutions such as MIT.
+          Nevertheless, in the 1990s, the professional graphic design field was deeply impacted by the rise of the
+          “What-You-See-Is-What-You-Get” (WYSIWYG) interfaces that became popular as a way of emancipating oneself from
+          the required understanding of the machine to be able to make design, allowing a more intuitive approach to
+          graphic composition. Two opposite approaches developed in parallel and drew the main characteristics of what
+          this thesis has defined as “start-up and free open source cultures.” In the following sections, we clarify
+          their origins and highlight their radical opposition that resulted, at the very beginning of twenty-first
+          century, with the birth of Processing.
+
+          <h2>1.1 From Counterculture to Monopoly: A Silicon Valley Story</h2>
+          Narrowing down the geographical context in which the technological evolution of the end of the twentieth
+          century occurred, we observe that devices and programs massively employed, on a worldwide scale, for graphic
+          design production were created in the Silicon Valley. The binomial Apple Computer and Adobe Systems
+          intersected in this economic region located in Northern California in the United States. This region, pervaded
+          by the “Californian Ideology,” represented the biggest cultural paradox of modern history, and the
+          contemporary design’s culture has been molded mirroring this paradox.
+
+          <br><br>
+
+          <p class="quote">The Californian Ideology promiscuously combines the free-wheeling spirit of the hippies and
+            the
+            entrepreneurial zeal of the yuppies. This amalgamation of opposites has been achieved through a profound
+            faith
+            in the emancipatory potential of the new information technologies. In the digital utopia, everybody will be
+            both hip and rich. Not surprisingly, this optimistic vision of the future has been enthusiastically embraced
+            by computer nerds, slacker students, innovative capitalists, social activists, trendy academics, futurist
+            bureaucrats and opportunistic politicians across the USA.
+          </p>
+
+          <br><br>
+
+          In the transition from the Industrial into the Knowledge Age, cyberspace, the internet, and computers were
+          seen as tools for emancipation from the established power and hierarchy. Colonizing this new immaterial
+          space
+          is an exciting opportunity for freedom and liberation. The Californian counterculture of the 1960s was
+          reshaped, during the following decades, into a paradoxical ideology connecting two opposite but equally
+          powerful aspirations: the collective adventure enabled by the new reach of global communications and a
+          complete professional autonomy thriving on personal success. Marshall McLuhan’s global village theory and
+          the
+          libertarianism promoted by Ayn Rand’s allegories were hybridized in the start-up culture which, in the name
+          of
+          innovation, does not perceive, or refuse to admit, the discrepancies of its economic model.
+          Between the 1980s and the end of the twentieth century, cyberspace is still a place where market regulations
+          are inapplicable or unapplied. Therefore, we witnessed the surge of contrasting visions for the possible
+          missions of the internet. The philosophy of the free exchange of knowledge—brought about by activists such
+          as
+          Aaron Swartz—which fosters openness and collaboration, sets aside the liberal ideal of the conquest of
+          cyberspace as a new market, denying any empathy or collaborative spirit, and promoting one’s personal
+          success
+          at any price.
+          The aftermath of this paradoxical conjunction was the advent of start-ups companies born as opponents of
+          powerful economic giants that have metamorphosized into giant infrastructures. Apple Computer and Adobe
+          Systems—companies hardly avoidable in the professional graphic design field—are striking examples. Both
+          corporations initially thriving for innovation with the mission of offering technological autonomy to their
+          customers, have progressively been transformed into market dominators, forbidding any emancipation from
+          their
+          products.
+
+
+          <h3>1.1.1 Apple Computer</h3>
+          Invited by the TV show The Computer Chronicles, “icon designer” Susan Kare and Product Design Manager Jerry
+          Manock presented, in 1985, the newly released Apple computer. Ergonomically studied to be light, portable,
+          and
+          user-friendly, the Macintosh was designed to be used by the “99th percentile of males, females, and
+          children,”
+          Maddock stated. Developed to allow comprehensive accessibility, the interface system and icons were created
+          to
+          be clearly and quickly understood and assimilated. Susan Kare shared during the interview that “one of the
+          best experiences,” was how to easily teach in roughly twenty minutes to use the Macintosh to those who have
+          never used a computer before. This was made possible because the function of each icon does not need
+          additional verbal explanation. Interface and object’s ergonomics translated into reality what Steve Jobs
+          foresaw few years earlier: “bringing computers to the people, with the cheerful but affordable design of an
+          Eichler home and the ease of use of a sleek kitchen appliance.”
+          It is paramount to remember that, considering the historical and geographical context in which the Macintosh
+          was conceived, its design was inherently western centered. With its focus positioned on the wealthy
+          majority,
+          Apple partially ignored any inclusive design principle devoted to minorities or “special people,”
+          fundamentals
+          outlined, a few years later, by Don Norman in his The Design of Everyday Things. Nevertheless,
+          “accessibility”
+          and “affordability” were at the center of Apple’s communication. The seeds of Apple’s worldwide triumph of
+          the
+          following decades were grounded in these few concepts, as well as its paradox.
+          Describing the interface, Susan Kare highlighted the similarities between Macintosh icons and daily life
+          objects: the interface mimicked the interactions with our surroundings. We could easily recognize a
+          “document”
+          that we organized in a “folder.” If we saw clock hands turning, we could understand that we had to wait for
+          time to pass. We calculated simple operations with a pocket calculator, and we put it in the trash can
+          documents that we wanted to throw away.
+        </div>
+
+
 
     </div>
+    </section>
+    <div>
+
+    </div>
+
+  </div>
   </div>
 
 
