--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="one">
       <aside>
         <div class="footnote" id="footnoteIntro">
-          <br><br><br>
+          <br><br><br><br><br><br>
           <span class="fnnum">[1]</span>Graphisme En France 2012 : Code <> Outils <> Design, trans. Lucrezia Russo
               (Paris: Centre national des arts plastiques, 2012).><br>
               <span class="fnnum">[2]</span>idem, 5.<br>
@@ -188,34 +188,10 @@
           Publishers, 2019).<br>
           <span class="fnnum">[13]</span>“Emigre: Magazine #11,” accessed September 26, 2021,
           <br>https://<br>www.emigre.com<br>/Magazine/11.<br>
-          <!-- <span class="fnnum">[14]</span>ibid.<br>
-          <span class="fnnum">[15]</span>As it relates to computing, there are multiple claims to the first use of this
-          expression. In this thesis, we
-          refer to Steve Jobs’s definition of this acronym: “What you saw on the screen was what you’d get when you
-          printed it out.” Walter Isaacson, Steve Jobs (London: Abacus, 2015), 91.<br>
-          <span class="fnnum">[16]</span>“Forty to fifty years ago, Silicon Valley was a nickname for Santa Clara
-          Valley. The Valley was the hub of the
-          silicon chip industry with Fairchild Semiconductor in Mountain View as its center and hundreds of spin-offs
-          from Fairchild, related service companies and competitors. As the industry and economy grew with the price of
-          real estate, the economic region of Silicon Valley began to expand. In 2019, one could argue that Silicon
-          Valley companies stretch from Monterey to Santa Rosa and Santa Cruz to Grass Valley.” “Where Is Silicon
-          Valley?” Silicon Valley Historical Association, accessed October 2, 2021,
-          https://<br>www.siliconvalley<br>historical.org<br>/where-is-silicon-valley.<br>
-          <span class="fnnum">[17]</span>Richard Barbrook and Andy Cameron, “The Californian Ideology,” Science as
-          Culture 6, no. 1 (January 1996):
-          44–72, <br>https://doi.org/10.1080<br>/09505439609526455.<br>
-          <span class="fnnum">[18]</span>“‘Cyberspace and the American Dream: A Magna Carta for the Knowledge Age,’
-          Future Insight, Aug. 1994,”
-          accessed August 16, 2021,
-          <br>http://www.pff.org/<br>issues-pubs/<br>futureinsights/<br>fi1.2magnacarta.html.<br>
-          <span class="fnnum">[19]</span>Cédric Durand, Technoféodalisme (Paris: Zones, 2020), 16.<br>
-          <span class="fnnum">[20]</span>Marshall McLuhan, Quentin Fiore, and Jerome Agel, The Medium is the Massage: An
-          Inventory of Effects. (London:
-          Penguin Classics, 2008), 63.<br>
-          <span class="fnnum">[21]</span>“All Watched Over by Machines of Loving Grace-Episode 1-Love and Power.Cs.Subs
-          on Vimeo,” 2011,
-          <br>https://vimeo.com<br>/515004292.<br>
-          <span class="fnnum">[22]</span>Durand, Technoféodalisme, 33.<br>
+
+
+
+          <!-- <span class="fnnum">[22]</span>Durand, Technoféodalisme, 33.<br>
           <span class="fnnum">[23]</span>Gochronicles, Computer Chronicles S01E18 Computer Ergonomics, 2019,
           https://<br>www.youtube.com/<br>watch?v=BdqvXokbtAk.<br>
           <span class="fnnum">[24]</span>ibid.<br>
@@ -362,11 +338,46 @@
           design.
           Furthermore, Greiman adopted the esthetical language of the computer as a
 
+        </div>
+      </section>
+    </div>
+    <div class="one">
+      <aside>
+        <div class="footnote" id="footnoteIntro">
+          <span class="fnnum">[14]</span>ibid.<br>
+          <span class="fnnum">[15]</span>In this thesis, we
+          refer to Steve Jobs’s definition of this acronym: “What you saw on the screen was what you’d get when you
+          printed it out.” Walter Isaacson, Steve Jobs (London: Abacus, 2015), 91.<br>
+          <!-- <span class="fnnum">[16]</span>“Forty to fifty years ago, Silicon Valley was a nickname for Santa Clara
+                Valley. The Valley was the hub of the
+                silicon chip industry with Fairchild Semiconductor in Mountain View as its center and hundreds of spin-offs
+                from Fairchild, related service companies and competitors. As the industry and economy grew with the price of
+                real estate, the economic region of Silicon Valley began to expand. In 2019, one could argue that Silicon
+                Valley companies stretch from Monterey to Santa Rosa and Santa Cruz to Grass Valley.” “Where Is Silicon
+                Valley?” Silicon Valley Historical Association, accessed October 2, 2021,
+                https://<br>www.siliconvalley<br>historical.org<br>/where-is-silicon-valley.<br> -->
+          <span class="fnnum">[17]</span>Richard Barbrook and Andy Cameron, “The Californian Ideology,” Science as
+          Culture 6, no. 1 (January 1996):
+          44–72, <br>https://doi.org/10.1080<br>/09505439609526455.<br>
+          <span class="fnnum">[18]</span>“‘Cyberspace and the American Dream: A Magna Carta for the Knowledge Age,’
+          Future Insight, Aug. 1994,”
+          accessed August 16, 2021,
+          <br>http://www.pff.org/<br>issues-pubs/<br>futureinsights/<br>fi1.2magnacarta.html.<br>
+          <span class="fnnum">[19]</span>Cédric Durand, Technoféodalisme (Paris: Zones, 2020), 16.<br>
+          <span class="fnnum">[20]</span>Marshall McLuhan, Quentin Fiore, and Jerome Agel, The Medium is the Massage: An
+          Inventory of Effects. (London:
+          Penguin Classics, 2008), 63.<br>
+          <span class="fnnum">[21]</span>“All Watched Over by Machines of Loving Grace-Episode 1-Love and Power.Cs.Subs
+          on Vimeo,” 2011,
+          <br>https://vimeo.com<br>/515004292.<br>
+        </div>
+      </aside>
+    </div>
 
+    <div class="two">
+      <section>
+        <div class="twoCol">
 
-
-
-          <br>
           new opportunity for graphic design
           expression: the pixel, the raster of the screen, transparency and superposition, as well as the simultaneous
           presence of visual elements became core elements of her production. These new esthetics could, according to
@@ -400,7 +411,7 @@
           <br><br>
           <br><br>
           <br><br>
-          <br>
+
           <h2>1.1 From Counterculture to Monopoly: A Silicon Valley Story</h2>
           Narrowing down the geographical context in which the technological evolution of the end of the twentieth
           century occurred, we observe that devices and programs massively employed, on a worldwide scale, for graphic
@@ -1887,7 +1898,8 @@
 
                   Durand, Cédric. Technoféodalisme. Paris: Zones, 2020.<br><br>
 
-                  Fuller, Matthew. Behind the Blip: Essays on the Culture of Software. Brooklyn: Autonomedia, 2003.<br><br>
+                  Fuller, Matthew. Behind the Blip: Essays on the Culture of Software. Brooklyn: Autonomedia,
+                  2003.<br><br>
 
                   Gerstner, Karl. Karl Gerstner Designing Programmes. Zürich: Lars Muller Publishers, 2019.<br><br>
 
@@ -1914,11 +1926,13 @@
                   McLuhan, Marshall, Quentin Fiore, and Jerome Agel. The Medium is the Massage: An Inventory of Effects.
                   London: Penguin Classics, 2008.<br><br>
 
-                  Müller-Brockmann, Josef. Grid Systems in Graphic Design, 5th Edition. Salenstein: Niggli Verlag, 2007.<br><br>
+                  Müller-Brockmann, Josef. Grid Systems in Graphic Design, 5th Edition. Salenstein: Niggli Verlag,
+                  2007.<br><br>
 
                   Negroponte, Nicholas. Soft Architecture Machines. Cambridge: MIT Press, 1976.<br><br>
 
-                  Norman, Don. The Design of Everyday Things: Revised and Expanded Edition. New York: Basic Books, 2013.<br><br>
+                  Norman, Don. The Design of Everyday Things: Revised and Expanded Edition. New York: Basic Books,
+                  2013.<br><br>
 
                   Raymond, Eric S. The Cathedral & the Bazaar. Cambridge: O’Reilly, 2001.<br><br>
 
@@ -1951,7 +1965,8 @@
                       Lorenz, Martin. “Des identités visuelles statiques aux identité visuelles flexibles ” Graphisme En
                       France 2017 : Logo & identités visuelles, Centre national des arts plastiques, 2013.<br><br>
 
-                      Rand, Paul. “Logos, Flags, and Escusheons.” AIGA Journal of Graphic Design, vol. 9, n°3, 1991.<br><br>
+                      Rand, Paul. “Logos, Flags, and Escusheons.” AIGA Journal of Graphic Design, vol. 9, n°3,
+                      1991.<br><br>
 
                       Remington, R. Roger. “Un regard historique sur l’identité visuelle” Graphisme En France 2017 :
                       Logo
@@ -1968,7 +1983,8 @@
                       accessed November 22, 2021. http://strabic.fr/Workshop-PrePostPrint.<br><br>
 
                       Graphéine, Agence de communication Paris Lyon, “La ville de Paris revoit son identité visuelle,”
-                      January 13, 2019. https://www.grapheine.com/actulogo/nouvelle-identite-visuelle-pour-paris.<br><br>
+                      January 13, 2019.
+                      https://www.grapheine.com/actulogo/nouvelle-identite-visuelle-pour-paris.<br><br>
 
                       Grothaus, Michael. “Adobe Shuts down Photoshop in Venezuela Because of Trump’s Sanctions.”
                       Accessed
@@ -1993,7 +2009,8 @@
                       November 1, 2021. https://eyeondesign.aiga.org/an-oral-history-of-processing-part-two/.<br><br>
 
                       Toppins, Aggie. “Can We Teach Graphic Design History Without Chronology?,” Eye on Design, October
-                      29, 2020. https://eyeondesign.aiga.org/can-we-teach-graphic-design-history-without-chronology/.<br><br>
+                      29, 2020.
+                      https://eyeondesign.aiga.org/can-we-teach-graphic-design-history-without-chronology/.<br><br>
 
                       Toppins, Aggie. “Can We Teach Graphic Design History Without the Cult of Hero Worship?,” Eye on
                       Design, May 29, 2020.
@@ -2013,13 +2030,15 @@
                       Codeland. Dan Shiffman-Codeland-Creative Coding: An Art and Code Showcase-NYC 2017, 2017.
                       https://www.youtube.com/watch?v=68JUaszsvmU.<br><br>
 
-                      Curtis, Adam. All Watched Over by Machines of Loving Grace, 2011. https://vimeo.com/515004292.<br><br>
+                      Curtis, Adam. All Watched Over by Machines of Loving Grace, 2011.
+                      https://vimeo.com/515004292.<br><br>
 
                       Etapes. Daniel Shiffman: Computational Design, 2010. https://vimeo.com/14029087.<br><br>
 
                       Eyeo Festival. Eyeo 2013-Zach Lieberman, 2013. https://vimeo.com/69437363.<br><br>
 
-                      Galerie des Galeries. 2016_All Over_interview Vera Molnar, 2016. https://vimeo.com/384470661.<br><br>
+                      Galerie des Galeries. 2016_All Over_interview Vera Molnar, 2016.
+                      https://vimeo.com/384470661.<br><br>
 
                       Google Design. Making Material Design, 2015. https://www.youtube.com/watch?v=rrT6v5sOwJg.<br><br>
 
@@ -2057,7 +2076,8 @@
 
                       Social Media
                       Processing Foundation. “A Modern Prometheus. The History of Processing by Casey Reas and Ben Fry.”
-                      Medium, May 28, 2018. https://medium.com/processing-foundation/a-modern-prometheus-59aed94abe85/.<br><br>
+                      Medium, May 28, 2018.
+                      https://medium.com/processing-foundation/a-modern-prometheus-59aed94abe85/.<br><br>
 
                       Processing Foundation. “CreateCanvas: Interview with Dan Shiffman.” Medium, October 15, 2019.
                       https://medium.com/processing-foundation/createcanvas-interview-with-dan-shiffman-eb22043882e6.<br><br>
@@ -2154,7 +2174,8 @@
                       Tim Rodenbröker Creative Coding. “About • Tim Rodenbröker Creative Coding.” Accessed August 16,
                       2021. https://timrodenbroeker.de/about/.<br><br>
 
-                      TheGreenEyl, “MIT Media Lab” accessed November 20, 2021, http://thegreeneyl.com/mit-media-lab.<br><br>
+                      TheGreenEyl, “MIT Media Lab” accessed November 20, 2021,
+                      http://thegreeneyl.com/mit-media-lab.<br><br>
 
                       The Progress and Freedom Foundation. “‘Cyberspace and the American Dream: A Magna Carta for the
                       Knowledge Age,’ Future Insight, Aug. 1994.” Accessed August 16, 2021.
