--- a/index.html
+++ b/index.html
@@ -190,18 +190,7 @@
           <br>https://<br>www.emigre.com<br>/Magazine/11.<br>
 
 
-
-          <!-- <span class="fnnum">[22]</span>Durand, Technoféodalisme, 33.<br>
-          <span class="fnnum">[23]</span>Gochronicles, Computer Chronicles S01E18 Computer Ergonomics, 2019,
-          https://<br>www.youtube.com/<br>watch?v=BdqvXokbtAk.<br>
-          <span class="fnnum">[24]</span>ibid.<br>
-          <span class="fnnum">[25]</span>Isaacson, Steve Jobs, 89.<br>
-          <span class="fnnum">[26]</span>Don Norman, The Design of Everyday Things: Revised and Expanded Edition (New
-          York: Basic Books, 2013), 162.<br>
-          <span class="fnnum">[27]</span>Gianni Barbacetto, Design Interface: How Man and Machine Communicate; Olivetti
-          Design Research by King and
-          Miranda (Milano: Arcadia, 1987), 11.<br>
-          <span class="fnnum">[28]</span>Computer History Museum, Adobe Systems. The Founders’ Perspective, 2002,
+          <!-- <span class="fnnum">[28]</span>Computer History Museum, Adobe Systems. The Founders’ Perspective, 2002,
           https://<br>www.youtube.com/<br>watch?v=<br>pl0GthyD3f0.<br>
           <span class="fnnum">[29]</span>Computer History Museum, Adobe Systems.<br>
           <span class="fnnum">[30]</span>Rhonda Rubinstein, “Eye Magazine | Feature | Reputations: Zuzana Licko,”
@@ -452,7 +441,33 @@
           start-up culture which, in the name
           of
           innovation, does not perceive, or refuse to admit, the discrepancies of its economic model.
-          Between the 1980s and the end of the twentieth century, cyberspace is still a place where market regulations
+          Between the 1980s and the end 
+          
+        </div>
+      </section>
+    </div>
+    <div class="one">
+      <aside>
+        <div class="footnote" id="footnoteIntro">
+          <span class="fnnum">[22]</span>Durand, Technoféodalisme, 33.<br>
+          <span class="fnnum">[23]</span>Gochronicles, Computer Chronicles S01E18 Computer Ergonomics, 2019,
+          https://<br>www.youtube.com/<br>watch?v=BdqvXokbtAk.<br>
+          <span class="fnnum">[24]</span>ibid.<br>
+          <span class="fnnum">[25]</span>Isaacson, Steve Jobs, 89.<br>
+          <span class="fnnum">[26]</span>Don Norman, The Design of Everyday Things: Revised and Expanded Edition (New
+          York: Basic Books, 2013), 162.<br>
+          <span class="fnnum">[27]</span>Gianni Barbacetto, Design Interface: How Man and Machine Communicate; Olivetti
+          Design Research by King and
+          Miranda (Milano: Arcadia, 1987), 11.<br>
+        </div>
+      </aside>
+    </div>
+
+    <div class="two">
+      <section>
+        <div class="twoCol">
+          
+          of the twentieth century, cyberspace is still a place where market regulations
           are inapplicable or unapplied. Therefore, we witnessed the surge of contrasting visions for the possible
           missions of the internet. The philosophy of the free exchange of knowledge—brought about by activists such
           as
